# saf

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh
conf/: saf.json  sails.json
example/: build_test.sh
example/Login/: Makefile  login.json  login.pb.cc  login.pb.h  login.proto  login_client.cc  login_config.cc  login_config.h  login_service.cc  login_service.h  logout_client.cc  register.cc
example/echo_sync/: Makefile  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  client.cc  client.cc~  register.cc  test.php
example/rank/: Makefile  client.cc  rank.json  rank.proto  rank_config.cc  rank_config.h  rank_service.cc  rank_service.h  register.cc
example/rpcping/: Makefile  client.cc  ping.pb.cc  ping.pb.h  ping.proto  register.cc
example/rpcping/com/xiaoji/net/: Ping.java
src/: Makefile  config.cc  config.h  handle_rpc.cc  handle_rpc.h  module_load.cc  module_load.h  monitor.cc  monitor.h  rpc_channel.cc  rpc_channel.h  rpc_client.cc  rpc_client.h  rpc_controller.cc  rpc_controller.h  rpc_util.h  saf.cc  saf_const.h  saf_packet.h  saf_packet.pb.cc  saf_packet.pb.h  saf_packet.proto  saf_swig.i  saf_version.h.in  server.cc  server.h  service_register.cc  service_register.h
src/client/cc/: Makefile  client_rpc_channel.cc  client_rpc_channel.h  client_rpc_controller.cc  client_rpc_controller.h
src/client/java/com/net/rpc/: ByteConvertUtil.java  RpcChannelImp.java  RpcControllerImp.java  RpcPackets.java
static/: saf.css  stat.html
